force-app/main/default/objects/vlocity_ps__BuildingSelectionSettings__c/vlocity_ps__BuildingSelectionSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Building Selection Settings</label>
</CustomObject>