force-app/main/default/objects/vlocity_ps__BuildingSelectionSettings__c/fields/vlocity_ps__AreaElement__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__AreaElement__c</fullName>
    <label>Area Element</label>
    <length>255</length>
    <type>Text</type>
</CustomField>