force-app/main/default/objects/vlocity_ps__BuildingSelectionSettings__c/fields/vlocity_ps__EntityFilterName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__EntityFilterName__c</fullName>
    <label>Entity Filter Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>