force-app/main/default/objects/vlocity_ps__BuildingSelectionSettings__c/fields/vlocity_ps__TypeElement__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__TypeElement__c</fullName>
    <label>Type Element</label>
    <length>255</length>
    <type>Text</type>
</CustomField>